--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,7 @@
   --planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
   --appColor: #3c3f45;
 }
+
+.App {
+  position: relative;
+}
