--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -46,6 +46,9 @@
 .carousel-content-bg {
   background: url("../../assets/wallpaper1-sec1.png") no-repeat;
   background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .carousel-arrows {
@@ -59,4 +62,29 @@
   justify-content: center;
   color: #666;
   background: var(--paleyellow);
+  padding-top: 10px;
+}
+
+.carousel-controllers-bg-1 {
+  background-color: #333;
+  color: var(--paleyellow);
+}
+
+.carousel-controllers-bg-2 {
+  background-color: rgb(246, 245, 232);
+}
+
+@media (max-width: 700px) {
+  .carousel-content-container {
+    padding-left: 0px;
+    gap: 0px;
+  }
+  .carousel-content-sec3-img {
+    width: 100%;
+  }
+
+  .carousel-content-bg {
+    background: url("../../assets/mobile-bg.png") no-repeat;
+    background-position: center;
+  }
 }
