--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -11,12 +11,18 @@
 }
 
 .content h1 {
-  font-size: 1.875rem;
-  font-weight: 500;
+  font-size: 1.575rem;
+  font-weight: 300;
 }
 
 .content p {
   font-size: 1rem;
-
+  margin-top: 10px;
   line-height: 1.7;
+}
+
+@media (max-width: 700px) {
+  .content button {
+    width: 80%;
+  }
 }
