--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -79,3 +79,26 @@
   padding: 20px 40px;
   color: var(--paleyellow);
 }
+
+@media (max-width: 700px) {
+  .footer {
+    padding: 20px;
+    font-size: 13px;
+  }
+  .footer-section {
+    flex-direction: column;
+  }
+  .footer-left {
+    width: 100%;
+  }
+  .footer-right {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+  .footer-links-container {
+    width: 45%;
+  }
+  .footer-company-name {
+    padding: 10px 0px;
+  }
+}
