--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,13 @@
   scroll-behavior: smooth;
 }
 
+html,
 body {
-  min-height: 100vh;
-  background: var(--paleyellow);
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 a {
