--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,19 +1,10 @@
-.section-3 {
-  display: flex;
-  height: 672px;
-  padding: 150px 0 0;
-}
-
-/* .section-3 img {
-  padding-left: 40px;
-  width: 55%;
-  height: 100%;
-} */
-
 .section-4 {
   display: flex;
-  height: 672px;
+  height: 572px;
   padding: 150px 0 0;
+
+  background-color: var(--paleyellow);
+  align-items: center;
 }
 
 .section-4 div {
@@ -24,11 +15,6 @@
   width: 55%;
   height: 100%;
 }
-
-/* .images-slider {
-  height: 400px !important;
-  width: 580px !important;
-} */
 
 .trust-badges-container {
   background-color: #f6f5e8;
@@ -50,4 +36,34 @@
 
 .trust-badges p {
   font-weight: 300;
+  font-size: 15px;
+  opacity: 0.7;
+}
+
+@media (max-width: 700px) {
+  .section-4 {
+    flex-direction: column;
+
+    align-items: center;
+    padding: 0px;
+    padding-top: 80px;
+    height: 472px;
+  }
+
+  .section-4 img {
+    width: 100%;
+  }
+  .section-4 div {
+    width: 100%;
+    padding: 10px 20px;
+  }
+
+  .trust-badges-container {
+    flex-direction: column;
+    gap: 20px;
+    padding: 40px 20px;
+  }
+  .trust-badges-container div {
+    align-items: start;
+  }
 }
