--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .section-4 {
   display: flex;
-  height: 572px;
-  padding: 150px 0 0;
+  height: 372px;
+  padding-top: 10px;
 
   background-color: var(--paleyellow);
   align-items: center;
